-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8
-
None
-
dd254fcd1 (dev), bccc7cf3b (6.8), 214e24deb (dev), 138c33f47 (6.8)
This is wildly incorrect: https://doc-snapshots.qt.io/qt6-6.8/qtgraphs-overview-3d.html#3d-themes
There are also a few warnings from qgraphstheme.cpp:
qgraphstheme.cpp:138: (qdoc) warning: Can't link to 'QQuickGraphs::theme' qgraphstheme.cpp:152: (qdoc) warning: Can't link to 'qtqml-cppintegration-data.html' qgraphstheme.cpp:131: (qdoc) warning: Can't link to 'QML Value Types' qgraphstheme.cpp:462: (qdoc) warning: Can't link to 'QAbstract3DGraphWidget::shaderGridEnabled' qgraphstheme.cpp:472: (qdoc) warning: Can't link to 'QAbstract3DGraphWidget::shaderGridEnabled'
In addition to these, a lot of the things documented in the cpp file do not show up in the actual docs (for example enums in QML, or \qmlvaluetype graphsline).
- relates to
-
QTBUG-126831 Do a complete check throughout the documentation of QtGraphs
-
- Closed
-
For Gerrit Dashboard: QTBUG-126829 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
578598,7 | Fix documentation for theme | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |
578657,3 | Fix theme snippets and missing properties | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |
579000,2 | Fix documentation for theme | 6.8 | qt/qtgraphs | Status: MERGED | +2 | 0 |
579389,2 | Fix theme snippets and missing properties | 6.8 | qt/qtgraphs | Status: MERGED | +2 | 0 |