Fix documentation for theme

Fixes: QTBUG-126829
Change-Id: Ia133e197c297ff131678713d9f79a21c38105b8f
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit dd254fcd1c26bd6e55e36c2bf43365c66017daac)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>